<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:gravity="center|end"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:text="@string/_0"
        android:textSize="40sp"
        android:background="@color/cardview_dark_background"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/ac"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/ac"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            app:backgroundTint="@null"
            android:onClick="acEvent"
             />

        <Button
            android:id="@+id/Sign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/positiveOrNegative"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            app:backgroundTint="@null"
            android:onClick="signEvent"
            />

        <Button
            android:id="@+id/percentage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/percentage"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:background="@drawable/background_circle_grey"
            app:backgroundTint="@null"
            android:onClick="percentEvent"
            />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:textColor="@color/button_text_change_color"
            android:background="@drawable/button_color"
            app:backgroundTint="@null"
            android:onClick="operatorEvent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumSeven"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumEight"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumNine"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:textColor="@color/button_text_change_color"
            android:background="@drawable/button_color"
            app:backgroundTint="@null"
            android:onClick="operatorEvent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumFour"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumFive"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumSix"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/minus"
            android:layout_margin="5dp"
            android:textSize="45sp"
            android:textColor="@color/button_text_change_color"
            android:background="@drawable/button_color"
            app:backgroundTint="@null"
            android:onClick="operatorEvent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumOne"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumTwo"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/NumThree"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/plus"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:textColor="@color/button_text_change_color"
            android:background="@drawable/button_color"
            app:backgroundTint="@null"
            android:onClick="operatorEvent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="fill_parent"
            android:text="@string/NumZero"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="30sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/dot"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            app:backgroundTint="#E4423E3E"
            android:textSize="40sp"
            android:background="@drawable/background_circle_grey"
            android:onClick="numberEvent"
            />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:text="@string/equal"
            android:layout_margin="5dp"
            android:textSize="40sp"
            android:textColor="@color/button_text_change_color"
            android:background="@drawable/button_color"
            app:backgroundTint="@null"
            android:onClick="equalEvent"
            />
    </LinearLayout>

</LinearLayout>
